# RSS

./: .env  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: version-history.md
prisma/: schema.prisma
prisma/data/: intel-hub.db
prisma/migrations/20260608070920_init/: migration.sql
prisma/migrations/20260608080204_phase2/: migration.sql
prisma/migrations/20260608085708_add_channel_request/: migration.sql
public/admin/: index.html
scripts/: test-pipeline.ts  test-scrape.ts  tsconfig.json  update-chuhai-rule.ts  verify-collect.ts
src/: index.ts  scheduler.ts
src/collectors/: apk.collector.ts  rss.collector.ts  scrape.collector.ts
src/lib/: prisma.ts
src/middleware/: adminIPWhitelist.ts  auth.middleware.ts
src/routes/: admin.routes.ts  auth.routes.ts  channel-request.routes.ts  subscription.routes.ts  user.routes.ts
src/services/: ai.service.ts  aiQueue.service.ts  claude.service.ts  collect.service.ts  dedup.service.ts  email.service.ts  feishu.service.ts  report.service.ts
src/types/: index.ts
src/utils/: intelFormat.ts
web/: .env.example  Dockerfile  next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/reports/: page.tsx
web/components/: DiscoverPanel.tsx  IntelItemCards.tsx  RouteGuard.tsx  Sidebar.tsx
web/lib/: api.ts  auth.tsx  channel-context.tsx  intelFormat.ts  larkStyles.ts
(+9 files in other folders)
