[package]
name = "intel-hub-desktop"
version = "1.0.0"
description = "情报订阅站 Desktop App"
authors = ["Intel Hub Team"]
license = "MIT"
repository = ""
default-run = "intel-hub-desktop"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "intel_hub_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "intel-hub-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
